--- a/Day3/index.html
+++ b/Day3/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
     <!-- GRID AREA HOMEWORK -->
-    <!-- <h2>1</h2> -->
-    <!-- <div class="parent-g">
+    <h2>one</h2>
+    <div class="parent-g">
         <div class="child-g header-g">Header</div>
         <div class="child-g menu-g">Menu</div>
         <div class="child-g">Main</div>
         <div class="child-g">Right</div>
         <div class="child-g">Footer</div>
-    </div> -->
+    </div>
 
-    <!-- <h2>2</h2> -->
-    <!-- <div class="parent1">
+    <h2>two</h2>
+    <div class="parent1">
         <child class="child1 gr">Green</child>
         <child class="child1 yel">Yellow</child>
         <child class="child1 re">Red</child>
         <child class="child1 pu">Purple</child>
-    </div> -->
+    </div>
 
-    <!-- <h2>3</h2> -->
+    <h2>three</h2>
     <div class="parent2">
         <div class="child2">1</div>
         <div class="child2">2</div>
