--- a/Day3/index.html
+++ b/Day3/index.html
@@ -10,7 +10,7 @@
     <!-- GRID AREA HOMEWORK -->
     <h2>one</h2>
     <div class="parent-g">
-        <div class="child-g header-g">Header</div>
+        <div class="child-g header-g">Header</div>l̥ō
         <div class="child-g menu-g">Menu</div>
         <div class="child-g">Main</div>
         <div class="child-g">Right</div>
