--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </dl>
             
             <h2>table</h2>
-            <table border="1" style="border-collapse: collapse;">
+            <table style="border-collapse: collapse;">
             <caption>Student Data</caption>
                 <thead>
                     <tr>
