--- a/imageGeneratorBackend/imageGenerator/index.html
+++ b/imageGeneratorBackend/imageGenerator/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="./app.js" type="module"></script>
+    <script src="/imageGeneratorBackend/imageGenerator/src/app.js" type="module"></script>
 </body>
 </html>
